# POMC_LR_1

./: CMakeLists.txt  README.md  main copy 2.cpp  main.cpp
include/: mainwindow.h  taskOne.h  taskThree.h
include/widgets/: customnumberinput.h
src/: mainwindow.cpp  taskOne.cpp  taskThree.cpp  taskTwo.cpp
src/widgets/: customnumberinput.cpp
